# hilbertviz

./: .gitignore  Arch.md  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: build.yml  codeql.yml
examples/: gen_statistical_data.py
fuzz/: CMakeLists.txt  README.md  afl_file_slice.c  afl_pipeline.c  fuzz_target.c  fuzz_target.h  libfuzz_file_slice.c  libfuzz_pipeline.c
fuzz/scripts/: afl_common.sh  cleanup_afl.sh  restorEnergy.sh  restoreEnergy.sh  run_coverage.sh  run_coverage_clang20.sh  run_libfuzzer_ram.sh  setPerformance.sh  start_afl_tmux.sh
include/: byte_cube.h  file_io.h  hilbert.h  hilbert3d.h  image.h  palette.h  png_writer.h  point_cloud3d.h  ppm.h  render.h
scripts/: run_tsan.sh
src/: 3d_app.c  3d_app.h  3d_camera.c  3d_camera.h  3d_mode.c  3d_mode.h  3d_platform.c  3d_platform.h  3d_renderer.c  3d_renderer.h  CMakeLists.txt  byte_cube.c  file_io.c  hilbert.c  hilbert3d.c  image.c  main.c  main_3d.c  palette.c  png_writer.c  point_cloud3d.c  ppm.c  render.c
tests/: CMakeLists.txt  test_unit.c
